the Free Software Foundation's WEB site http://www.fsf.org

============================================================

PyKota NEWS :

    - 1.02alpha :
    
        - The installation script now checks for software availability
          and in case a software is missing asks the user if he
          wants to continue with the installation or abort it.
          
        - Improved documentation.
        
        - You can now set the tcp/ip port on which the Quota Storage
          Server is listening, see sample configuration file for details.
        
        - Better error handling if PygreSQL is not installed or not 
          available.
        
    - 1.01 :
    
        - The configuration file now accepts an option   
          to choose the recipient(s) of the email messages :
          
            - DevNull means no one will receive them.
            - User means only the user will receive them.
            - Admin means only the admin will receive them.
            - Both means the User and the Admin will receive them.
            
        - The configuration file now uses hard-coded default values
          when an option is not set. See sample configuration file
          for details.
          
        - Manual pages are included since 1.00, but I forgot to    
          add this information to this file.
          
        - Redistribution terms for the official package have  
          softened and are now fully GPL compatible : 
          unrestricted modification is now allowed even for
          the version number.
          
    - 1.00 :
    
        - edpykota now accepts a --noquota option. This
          disable quota checking while still doing page
          accounting. This is really useful for people
          who don't want to limit their users but want
          to know how much pages they print.
          
        - Some untested scripts were added to retrieve
          the life time page counter of non-SNMP printers.
          